- Added the option to character settings to apply a custom post-processing effect (using Chummer's document-invariant XPath processor) to essence modifiers after they have all been collected but before they are applied to 'ware essence costs.
- Fixed up various irregularities from dropdown box items that would creep in as Chummer open for longer and longer.

Data Changes:
- Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
- Corrected the Cybercombat dice bonus of Intrusion Countermeasure (The Guardian) to be conditional because it is not granted against IC.
- Added bonus nodes for Architect (The Builder) and Archivist (The Secret Keeper) paragons' dice bonuses for the Edit File and Matrix Search Computer actions respectively.
- Modified Cyberlimb Optimization so that if the selected skill for it is a skill that can be used with weapons, the +1 limit modifier will show up as part of those weapons' accuracy. Existing characters with this 'ware will need to either re-buy it or reapply improvements to see the effects. Part of #4841.

Changed/New Strings:
- LimitCondition_SoldierParagon
- Label_Options_EssenceModifierPostExpression

Build 224
Application Changes:
- Added support for opening and saving characters in the form of compressed saves (chum5lz) instead of uncompressed (chum5). The program has three different options for the compression level of saved chum5lz files, and at the most thorough levels, savefile sizes can be decreased by up to around 90%.
- Fixed certain texts in Dark Mode not properly switching to a white color.
- The checkboxes for the list to set what cyberware and bioware grades are allowed at character creation no longer appears weird in dark mode on machines running Windows 10 or earlier.
- Fixed various display issues with custom rating names for vehicle mods.