@@ -6,6 +6,7 @@ Application Changes:
 - Markup and Black Market Pipeline cost modifiers applied to a weapon mount now properly apply based on all options of the weapon mount instead of just its size. Fixes #4933.
 - Added the option to character settings to apply a custom post-processing effect (using Chummer's document-invariant XPath processor) to essence modifiers after they have all been collected but before they are applied to 'ware essence costs.
 - Fixed up various irregularities from dropdown box items that would creep in as Chummer open for longer and longer.
+- Vehicle mods that override a vehicle's armor, e.g. armor mods under the drone modding rules of Rigger 5.0, now work properly.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
